# netherwick

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  daringsby  docker-compose.yml  mortar-sea  tongues  wuzzup
.cargo/: config.toml
configs/: kinect-calibration.example.json  llm.ollama.toml  llm.possession.toml  llm.toml  models.toml  pete-ups-x1202.toml  pete-ups.service  robot.toml  safety.toml  sim.toml
crates/netherwick-autonomic/: Cargo.toml
crates/netherwick-autonomic/src/: lib.rs
crates/netherwick-behaviors/: Cargo.toml
crates/netherwick-behaviors/src/: lib.rs
crates/netherwick-brainstem/: Cargo.toml  README.md  board.toml  body.toml  build.rs
crates/netherwick-brainstem-client/: Cargo.toml
crates/netherwick-brainstem-client/examples/: servo_loop.rs  sim_servo_loop.rs  uart_servo_loop.rs
crates/netherwick-brainstem-client/src/: lib.rs
crates/netherwick-brainstem/src/: body.rs  capabilities.rs  commands.rs  create.rs  events.rs  hardware.rs  main.rs  runtime.rs  status.rs
crates/netherwick-brainstem/src/arch/: mod.rs  pico_w.rs  rp2040.rs
crates/netherwick-brainstem/src/drivers/: create_power.rs  create_uart.rs  leds.rs  mod.rs
crates/netherwick-cockpit/: Cargo.toml
crates/netherwick-cockpit/examples/: contract_check.rs  servo_loop.rs  sim_servo_loop.rs  uart_servo_loop.rs
crates/netherwick-cockpit/src/: lib.rs
crates/netherwick-conductor/: Cargo.toml
crates/netherwick-conductor/src/: lib.rs
crates/netherwick-create1/: Cargo.toml
crates/netherwick-create1/src/: lib.rs
crates/netherwick-events/: Cargo.toml
crates/netherwick-events/src/: lib.rs
crates/netherwick-experience/: Cargo.toml
crates/netherwick-experience/src/: lib.rs
crates/netherwick-ledger/: Cargo.toml
crates/netherwick-ledger/src/: lib.rs
crates/netherwick-llm/: Cargo.toml
crates/netherwick-llm/src/: lib.rs
crates/netherwick-memory/: Cargo.toml
crates/netherwick-memory/src/: lib.rs
crates/netherwick-models/: Cargo.toml
crates/netherwick-models/src/: lib.rs
crates/netherwick-mouth/: Cargo.toml
crates/netherwick-mouth/src/: lib.rs
crates/netherwick-now/: Cargo.toml
crates/netherwick-now/src/: lib.rs
crates/netherwick-perception/: Cargo.toml
crates/netherwick-perception/src/: lib.rs
crates/netherwick-runtime/: Cargo.toml
crates/netherwick-runtime/src/: lib.rs
crates/netherwick-sensors/: Cargo.toml
crates/netherwick-sensors/src/: lib.rs  surface.rs
crates/netherwick-server/: Cargo.toml
crates/netherwick-server/src/: lib.rs
crates/netherwick-sim/: Cargo.toml
crates/netherwick-sim/src/: lib.rs  scenario.rs
crates/netherwick-tools/: Cargo.toml
crates/netherwick-tools/src/: main.rs
crates/netherwick-training/: Cargo.toml
crates/netherwick-training/src/: lib.rs
crates/netherwick-worldlab/: Cargo.toml
crates/netherwick-worldlab/src/: lib.rs
crates/pete-autonomic/: Cargo.toml
crates/pete-autonomic/src/: lib.rs
crates/pete-brainstem/: Cargo.toml  README.md  board.toml  body.toml  build.rs  memory.x  verb-classification.toml
crates/pete-brainstem/src/: audio.rs  body.rs  build_identity.rs  capabilities.rs  commands.rs  dhcp.rs  display.rs  display_tests.rs  events.rs  hardware.rs  icmp.rs  lib.rs  main.rs  network_registry.rs  rpi5_control.rs  runtime.rs  runtime_tests.rs  session.rs  status.rs  status_tests.rs
crates/pete-brainstem/src/arch/: mod.rs  pico_w.rs  pico_w_tests.rs  rp2040.rs  rpi5.rs
crates/pete-brainstem/src/arch/pico_w/: authority.rs  commands.rs  discovery.rs  handshake.rs  hardware.rs  http.rs  json.rs  network.rs  peripherals.rs  uart.rs  wifi.rs
crates/pete-brainstem/src/drivers/: create_power.rs  create_uart.rs  imu.rs  leds.rs  mod.rs  timers.rs
crates/pete-brainstem/src/runtime/: command_queue.rs  execution.rs  helpers.rs  lifecycle.rs  motion.rs  safety.rs  sensors.rs  state.rs
crates/pete-brainstem/src/runtime_tests/: feedback.rs  power.rs  reset_audio.rs  safety.rs
crates/pete-brainstem/src/status/: commands.rs  events.rs  render.rs  snapshot.rs  state.rs  telemetry.rs
crates/pete-cockpit/: Cargo.toml
crates/pete-cockpit/examples/: brainstem_debug.rs  contract_check.rs  create_link_debug.rs  motherbrain_bootstrap.rs  service_bootsel.rs  servo_loop.rs  sim_servo_loop.rs  uart_servo_loop.rs
crates/pete-cockpit/src/: handshake.rs  lib.rs  lib_tests.rs
crates/pete-cockpit/src/cockpit/: contract.rs  events.rs  interface.rs  possession.rs  safety.rs  simulator.rs  wire.rs
crates/pete-cockpit/src/cockpit/possession/: access.rs  network.rs  session.rs  uart.rs
crates/pete-cockpit/src/lib_tests/: firmware_contract.rs  handshake.rs  possession.rs  safety.rs  simulator.rs
crates/pete-conductor/: Cargo.toml
crates/pete-conductor/src/: goal_architecture.rs  goal_architecture_tests.rs  lib.rs  lib_tests.rs
crates/pete-conductor/src/goal/: arbiter.rs  evaluation.rs  module.rs  system.rs  types.rs
crates/pete-events/: Cargo.toml
crates/pete-events/src/: lib.rs  lib_tests.rs  observability.rs  observability_tests.rs
crates/pete-events/tests/fixtures/: brain_event_v0.json
crates/pete-experience/: Cargo.toml
crates/pete-experience/src/: encoding_tests.rs  lib.rs
crates/pete-experience/src/experience/: audio.rs  baseline.rs  behavior.rs  now.rs  pipeline.rs  prediction.rs  types.rs  vectorization.rs  visual.rs
docs/: 000-charter.md  001-architecture.md  002-now-schema.md  003-ledger.md  004-behavior-replacement.md  005-safety.md  006-models.md  007-memory-recall.md  008-llm-agent.md  009-sim.md  010-real-robot.md  011-rehearsal.md  012-curriculum.md  013-feature-registry.md  014-cockpit-session-handshake.md  015-resilient-multi-brain-network.md  016-physical-motherbrain-bootstrap.md  017-x1202-ups-and-motherbrain-reset.md  018-higher-brain-framework.md  019-brainstem-body-model.md  019-goal-architecture.md  020-now-world-model.md  021-self-model.md  022-cognitive-roles.md  023-temporal-social-epistemic-cognition.md  024-sleep-and-grounded-semantics.md  025-workspace-automation.md  026-brainstem-transit-failover.md  (+43 more)
(+541 files in other folders)
