[workspace]
members = [
    "crates/pete-core",
    "crates/pete-now",
    "crates/pete-ledger",
    "crates/pete-body",
    "crates/pete-sim",
    "crates/pete-worldlab",
    "crates/pete-sensors",
    "crates/pete-autonomic",
    "crates/pete-actions",
    "crates/pete-behaviors",
    "crates/pete-models",
    "crates/pete-training",
    "crates/pete-experience",
    "crates/pete-memory",
    "crates/pete-map",
    "crates/pete-perception",
    "crates/pete-mouth",
    "crates/pete-events",
    "crates/pete-llm",
    "crates/pete-conductor",
    "crates/pete-runtime",
    "crates/pete-server",
    "crates/pete-ui",
    "crates/pete-cockpit",
    "crates/pete-tools",
    "xtask",
]
exclude = [
    "crates/pete-brainstem",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
dotenvy = "0.15"

burn = { version = "0.21", features = ["ndarray", "autodiff"] }
burn-cuda = { version = "0.21", default-features = false, features = ["std", "autotune"] }

axum = { version = "0.8", features = ["macros", "json", "tokio", "ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["fs"] }

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
face_id = { version = "0.4.1", default-features = false, features = ["download-binaries", "copy-dylibs", "hf-hub"] }
hound = "3"
cpal = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
