[package]
name = "netherwick-autonomic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
netherwick-cockpit = { path = "../netherwick-cockpit" }
netherwick-now = { path = "../netherwick-now" }

[dev-dependencies]
netherwick-body = { path = "../netherwick-body" }
