[package]
name = "netherwick-behaviors"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
netherwick-core = { path = "../netherwick-core" }

[dev-dependencies]
toml.workspace = true
