[package]
name = "netherwick-brainstem"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3"
heapless = "0.8"
nb = "1"
panic-halt = "1.0"
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.12", features = ["rt", "critical-section-impl"], optional = true }

cyw43 = { version = "0.7", optional = true }
cyw43-pio = { version = "0.10", optional = true }
embassy-executor = { version = "0.10", features = ["arch-cortex-m", "executor-thread"], optional = true }
embassy-net = { version = "0.9", features = ["medium-ethernet", "proto-ipv4", "tcp"], optional = true }
embassy-rp = { version = "0.10", features = ["critical-section-impl", "rp2040", "time-driver"], optional = true }
embassy-time = { version = "0.5", optional = true }
embedded-io-async = { version = "0.7", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde-json-core = { version = "0.6", optional = true }
static_cell = { version = "2", optional = true }

[features]
default = ["rp2040"]
rp2040 = ["dep:rp2040-hal"]
pico-w = [
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:embassy-executor",
    "dep:embassy-net",
    "dep:embassy-rp",
    "dep:embassy-time",
    "dep:embedded-io-async",
    "dep:serde",
    "dep:serde-json-core",
    "dep:static_cell",
]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
lto = true
panic = "abort"
