[package]
name = "netherwick-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
serialport = "4"
thiserror.workspace = true
tungstenite = "0.29"

[[example]]
name = "servo_loop"
path = "examples/servo_loop.rs"

[[example]]
name = "uart_servo_loop"
path = "examples/uart_servo_loop.rs"

[[example]]
name = "sim_servo_loop"
path = "examples/sim_servo_loop.rs"
