[package]
name = "netherwick-conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-now = { path = "../netherwick-now" }
