[package]
name = "netherwick-create1"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
serial = ["dep:serialport"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serialport = { version = "4", optional = true }
netherwick-body = { path = "../netherwick-body" }
