[package]
name = "netherwick-experience"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-now = { path = "../netherwick-now" }
