[package]
name = "netherwick-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-now = { path = "../netherwick-now" }

[dev-dependencies]
netherwick-body = { path = "../netherwick-body" }
