[package]
name = "netherwick-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-now = { path = "../netherwick-now" }
