[package]
name = "netherwick-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
futures-util.workspace = true
tokio.workspace = true
chrono.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-now = { path = "../netherwick-now" }
uuid.workspace = true

[dev-dependencies]
netherwick-body = { path = "../netherwick-body" }
