[package]
name = "netherwick-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-core = { path = "../netherwick-core" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-now = { path = "../netherwick-now" }
