[package]
name = "netherwick-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
uuid.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-now = { path = "../netherwick-now" }

[dev-dependencies]
