[package]
name = "netherwick-models"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
burn.workspace = true
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-now = { path = "../netherwick-now" }

[dev-dependencies]
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
