[package]
name = "netherwick-mouth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cpal.workspace = true
serde.workspace = true
speaking = { git = "https://github.com/dancxjo/tongues.git" }
tongues-tts = { git = "https://github.com/dancxjo/tongues.git" }
tracing.workspace = true
