[package]
name = "netherwick-perception"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
netherwick-core = { path = "../netherwick-core" }
netherwick-now = { path = "../netherwick-now" }
netherwick-sensors = { path = "../netherwick-sensors", default-features = false }
