[package]
name = "netherwick-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-body = { path = "../netherwick-body" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-memory = { path = "../netherwick-memory" }
netherwick-now = { path = "../netherwick-now" }
netherwick-sensors = { path = "../netherwick-sensors" }
