[package]
name = "netherwick-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-body = { path = "../netherwick-body" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-core = { path = "../netherwick-core" }
netherwick-events = { path = "../netherwick-events" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-memory = { path = "../netherwick-memory" }
netherwick-models = { path = "../netherwick-models" }
netherwick-now = { path = "../netherwick-now" }
netherwick-sensors = { path = "../netherwick-sensors" }
netherwick-sim = { path = "../netherwick-sim" }
