[package]
name = "netherwick-sensors"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
linux-hardware = ["dep:cpal", "dep:libc", "dep:serialport", "dep:v4l"]
kinect-freenect = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
cpal = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
serialport = { version = "4", optional = true }
v4l = { version = "0.14", optional = true }
netherwick-now = { path = "../netherwick-now" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }

[dev-dependencies]
tokio.workspace = true
