[package]
name = "netherwick-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-core = { path = "../netherwick-core" }
netherwick-now = { path = "../netherwick-now" }
netherwick-runtime = { path = "../netherwick-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
