[package]
name = "netherwick-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-now = { path = "../netherwick-now" }
netherwick-runtime = { path = "../netherwick-runtime" }
netherwick-sensors = { path = "../netherwick-sensors" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-body = { path = "../netherwick-body" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-memory = { path = "../netherwick-memory" }
tokio.workspace = true
