[package]
name = "netherwick-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum.workspace = true
base64.workspace = true
image.workspace = true
netherwick-actions = { path = "../netherwick-actions" }
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-map = { path = "../netherwick-map" }
netherwick-now = { path = "../netherwick-now" }
netherwick-runtime = { path = "../netherwick-runtime" }
netherwick-sensors = { path = "../netherwick-sensors" }
netherwick-worldlab = { path = "../netherwick-worldlab" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-body = { path = "../netherwick-body" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-memory = { path = "../netherwick-memory" }
tokio.workspace = true
