[package]
name = "netherwick-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
netherwick-body = { path = "../netherwick-body" }
netherwick-cockpit = { path = "../netherwick-cockpit" }
netherwick-now = { path = "../netherwick-now" }
netherwick-sensors = { path = "../netherwick-sensors" }

[dev-dependencies]
tokio.workspace = true
