[package]
name = "netherwick-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "netherwick"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-body = { path = "../netherwick-body" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-memory = { path = "../netherwick-memory" }
netherwick-models = { path = "../netherwick-models" }
netherwick-now = { path = "../netherwick-now" }
netherwick-runtime = { path = "../netherwick-runtime" }
netherwick-server = { path = "../netherwick-server" }
netherwick-sensors = { path = "../netherwick-sensors" }
netherwick-sim = { path = "../netherwick-sim" }
netherwick-worldlab = { path = "../netherwick-worldlab" }
