[package]
name = "netherwick-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["kinect-freenect"]
kinect-freenect = ["netherwick-sensors/kinect-freenect"]

[[bin]]
name = "netherwick"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid.workspace = true
reqwest.workspace = true
image.workspace = true
base64.workspace = true
hound.workspace = true
speaking = { path = "../../../tongues/crates/speaking", features = ["asr-whisper"] }
netherwick-actions = { path = "../netherwick-actions" }
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-body = { path = "../netherwick-body" }
netherwick-cockpit = { path = "../netherwick-cockpit" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-map = { path = "../netherwick-map" }
netherwick-memory = { path = "../netherwick-memory" }
netherwick-models = { path = "../netherwick-models" }
netherwick-mouth = { path = "../netherwick-mouth" }
netherwick-now = { path = "../netherwick-now" }
netherwick-runtime = { path = "../netherwick-runtime" }
netherwick-server = { path = "../netherwick-server" }
netherwick-sim = { path = "../netherwick-sim" }
netherwick-training = { path = "../netherwick-training" }
netherwick-worldlab = { path = "../netherwick-worldlab" }

[target.'cfg(target_os = "linux")'.dependencies]
netherwick-sensors = { path = "../netherwick-sensors", features = ["linux-hardware"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
netherwick-sensors = { path = "../netherwick-sensors" }
