[package]
name = "netherwick-training"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-models = { path = "../netherwick-models" }
netherwick-now = { path = "../netherwick-now" }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
netherwick-actions = { path = "../netherwick-actions" }
netherwick-body = { path = "../netherwick-body" }
