[package]
name = "netherwick-training"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
netherwick-behaviors = { path = "../netherwick-behaviors" }
netherwick-actions = { path = "../netherwick-actions" }
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-models = { path = "../netherwick-models" }
netherwick-now = { path = "../netherwick-now" }
netherwick-sensors = { path = "../netherwick-sensors" }
netherwick-sim = { path = "../netherwick-sim" }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
