[package]
name = "netherwick-worldlab"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hound.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
netherwick-body = { path = "../netherwick-body" }
netherwick-core = { path = "../netherwick-core" }
netherwick-experience = { path = "../netherwick-experience" }
netherwick-ledger = { path = "../netherwick-ledger" }
netherwick-now = { path = "../netherwick-now" }
netherwick-perception = { path = "../netherwick-perception" }
netherwick-runtime = { path = "../netherwick-runtime" }
netherwick-sensors = { path = "../netherwick-sensors" }
netherwick-sim = { path = "../netherwick-sim" }

[dev-dependencies]
tempfile = "3"
netherwick-autonomic = { path = "../netherwick-autonomic" }
netherwick-conductor = { path = "../netherwick-conductor" }
netherwick-llm = { path = "../netherwick-llm" }
netherwick-memory = { path = "../netherwick-memory" }
