[package]
name = "pete-autonomic"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
pete-cockpit = { path = "../pete-cockpit" }
pete-now = { path = "../pete-now" }

[dev-dependencies]
pete-body = { path = "../pete-body" }
