[package]
name = "pete-brainstem"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
pete-cockpit-protocol = { path = "../pete-cockpit-protocol", features = ["serde"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
fugit = "0.3"
heapless = { version = "0.8", features = ["serde"] }
nb = "1"
panic-halt = "1.0"
rp2040-boot2 = "0.3"
rp-pac = { version = "7", features = ["rp2040"], optional = true }
rp2040-hal = { version = "0.12", features = ["rt", "critical-section-impl"], optional = true }

cyw43 = { version = "0.7", optional = true }
cyw43-pio = { version = "0.10", optional = true }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"], optional = true }
embassy-futures = { version = "0.1", optional = true }
embassy-net = { version = "0.9", features = ["medium-ethernet", "multicast", "proto-ipv4", "tcp", "udp"], optional = true }
embassy-rp = { version = "0.10", features = ["critical-section-impl", "rp2040", "time-driver"], optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-usb = { version = "0.6", optional = true }
embedded-io-async = { version = "0.7", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
static_cell = { version = "2", optional = true }
portable-atomic = { version = "1", features = ["critical-section"] }

[features]
default = ["rp2040"]
rp2040 = ["dep:rp2040-hal"]
pico-w = [
    "dep:cyw43",
    "dep:cyw43-pio",
    "dep:embassy-executor",
    "dep:embassy-futures",
    "dep:embassy-net",
    "dep:embassy-rp",
    "dep:embassy-time",
    "dep:embassy-usb",
    "dep:embedded-io-async",
    "dep:static_cell",
    "dep:rp-pac",
]
operator-debug = []
service-mode = []
motherbrain-reset = []

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
lto = true
panic = "abort"
