[package]
name = "pete-cockpit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
pete-cockpit-protocol = { path = "../pete-cockpit-protocol", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serialport = "4"
thiserror.workspace = true
tungstenite = "0.29"
uuid.workspace = true

[dev-dependencies]
toml.workspace = true

[[example]]
name = "servo_loop"
path = "examples/servo_loop.rs"

[[example]]
name = "uart_servo_loop"
path = "examples/uart_servo_loop.rs"

[[example]]
name = "sim_servo_loop"
path = "examples/sim_servo_loop.rs"

[[example]]
name = "contract_check"
path = "examples/contract_check.rs"

[[example]]
name = "motherbrain_bootstrap"
path = "examples/motherbrain_bootstrap.rs"
