[package]
name = "pete-conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
pete-actions = { path = "../pete-actions" }
pete-body = { path = "../pete-body" }
pete-experience = { path = "../pete-experience" }
pete-now = { path = "../pete-now" }
